--- a/sbsm-admin-app/src/pages/StudentGrades/styles.module.css
+++ b/sbsm-admin-app/src/pages/StudentGrades/styles.module.css
@@ -16,3 +16,15 @@
 .buttonWrapper h3 {
   margin-right: 1rem;
 }
+.headerWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #EFEFEF;
+  width: 100vw;
+}
+.headerWrapper h2 {
+  background-color: #EFEFEF;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
